# Mens

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: docker.yml  release.yml
backend/: .dockerignore  LICENSE  docker-compose.yml  main.py  requirements.txt  seed.py
backend/docker/: mongo-init.js
backend/nginx/: nginx.conf
backend/src/: config.py
backend/src/db/: __init__.py  client.py  models.py
backend/src/service/: __init__.py  dish.py  models.py  user.py
backend/src/types/: __init__.py  decimal128.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.css
frontend/src/lib/stores/: auth-store.ts  dish-store.ts  store.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/admin/: +page.svelte
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs
src/css/: welcome.css
src/lib/: api.ts  const.ts  types.ts
src/lib/components/: DishCard.svelte  titlebar.svelte
src/lib/components/buttons/: navigation-button.svelte  (+2 more)
src/lib/stores/: admin-store.ts  auth-store.ts  dish-store.ts  global-settings-store.ts  global-store.ts  global-ui-store.ts  setting-dialog-store.ts  types.ts
src/lib/utils/: display-window.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/dashboard/: +layout.svelte  +page.svelte
src/routes/display/: +page.svelte
src/routes/welcome/: +page.svelte
(+52 files in other folders)
